@@ -16,6 +16,7 @@ package de.fraunhofer.iosb.ilt.faaast.service.assetconnection.common.format;
 
 import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ScanResult;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.commons.lang3.StringUtils;
@@ -64,9 +65,9 @@ public class FormatFactory {
         init();
         if (formats.containsKey(key)) {
             try {
-                return formats.get(key).newInstance();
+                return formats.get(key).getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException | IllegalAccessException e) {
+            catch (NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
                 throw new RuntimeException(String.format("error instantiating data format (key: %s, class: %s)", key, formats.get(key).getName()), e);
             }
         }
